--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -59,7 +59,7 @@
             android:text="Eliminar" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/buttonBuscarTarea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
