--- a/GestorTareasApp/res/layout/activity_buscar_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_buscar_tarea.xml
@@ -14,6 +14,28 @@
         android:layout_height="420dp"
         android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/editTextCriterioBusqueda"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" >
+
+                <requestFocus />
+            </EditText>
+
+            <Button
+                android:id="@+id/buttonBuscarTarea"
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+        </LinearLayout>
+
         <ListView
             android:id="@+id/listViewTareas"
             android:layout_width="match_parent"
