--- a/GestorTareasApp/res/layout/activity_login.xml
+++ b/GestorTareasApp/res/layout/activity_login.xml
@@ -83,7 +83,7 @@
     android:textColor="#a31c16" />
 
 <Button
-    android:id="@+id/button1"
+    android:id="@+id/buttonBuscarTarea"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:onClick="onSpinner"
