--- a/GestorTareasApp/res/layout/activity_login.xml
+++ b/GestorTareasApp/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewNombreList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
