--- a/GestorTareasApp/res/layout/activity_register.xml
+++ b/GestorTareasApp/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/textViewNombreList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="            Registar Usuario"
