--- a/GestorTareasApp/res/layout/activity_spinner.xml
+++ b/GestorTareasApp/res/layout/activity_spinner.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.gestortareasapp.SpinnerActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewNombreList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
@@ -18,8 +18,8 @@
         android:id="@+id/spinner1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/textViewNombreList"
+        android:layout_below="@+id/textViewNombreList"
         android:layout_marginTop="100dp" />
 
 </RelativeLayout>
