--- a/GestorTareasApp/res/layout/activity_nueva_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_nueva_tarea.xml
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content" >
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_notificacion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onAgregarArchivo"
