--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -41,7 +41,7 @@
             android:text="Buscar" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_notificacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/buttonTRCancelar"
@@ -53,8 +53,8 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/button3"
-            android:layout_below="@+id/button3"
+            android:layout_alignLeft="@+id/btn_notificacion"
+            android:layout_below="@+id/btn_notificacion"
             android:onClick="onEliminarTarea"
             android:text="Eliminar" />
 
