--- a/GestorTareasApp/res/layout/activity_tarea_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_tarea_realizada.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txtDescripcionTarea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tarea"
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txtHoraTarea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Fecha"
