--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -35,8 +35,8 @@
             android:id="@+id/buttonTRCancelar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/buttonCrearTarea"
-            android:layout_below="@+id/buttonCrearTarea"
+            android:layout_alignLeft="@+id/buttonFecha"
+            android:layout_below="@+id/buttonFecha"
             android:onClick="onBuscarTarea"
             android:text="Buscar" />
 
@@ -69,7 +69,7 @@
             android:text="SALIR" />
 
         <Button
-            android:id="@+id/buttonCrearTarea"
+            android:id="@+id/buttonFecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
