--- a/GestorTareasApp/res/layout/activity_nueva_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_nueva_tarea.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+     android:background="@drawable/f2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -55,9 +56,9 @@
 
                 <Button
                     android:id="@+id/buttonCrearTarea"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.60"
+                    android:layout_weight="1"
                     android:text="Fecha Inicio" />
 
                 <Button
@@ -80,15 +81,18 @@
 
                 <Button
                     android:id="@+id/buttonFechaFin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.26"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:minHeight="48dip"
+                    android:minWidth="64dp"
                     android:text="Fecha Fin" />
 
                 <Button
                     android:id="@+id/buttonHoraFinn"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0.64"
                     android:text="Hora Fin" />
             </LinearLayout>
 
@@ -150,11 +154,11 @@
 
                 <Button
                     android:id="@+id/buttonTRCancelar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0.72"
                     android:onClick="onCancelar"
                     android:text="CANCELAR" />
-
             </LinearLayout>
 
         </TableRow>
