--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -3,6 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+     android:background="@drawable/f2"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -33,7 +34,7 @@
 
         <Button
             android:id="@+id/buttonTRCancelar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/buttonFecha"
             android:layout_below="@+id/buttonFecha"
@@ -42,7 +43,7 @@
 
         <Button
             android:id="@+id/btn_notificacion"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/buttonTRCancelar"
             android:layout_below="@+id/buttonTRCancelar"
@@ -51,7 +52,7 @@
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_notificacion"
             android:layout_below="@+id/btn_notificacion"
@@ -70,7 +71,7 @@
 
         <Button
             android:id="@+id/buttonFecha"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textViewValidarCedula"
